--- a/src/index.css
+++ b/src/index.css
@@ -13,47 +13,69 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
   font-family: "Poppins", sans-serif;
-  max-width: 100vw;
-  width: 100vw;
+  margin: 0;
+  padding: 0;
   height: 100vh;
   display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: var(--color-primary);
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  transition: background-color 0.3s ease;
+}
+
+.background:hover {
+  background-color: lightgreen;
+}
+
+.top {
+  z-index: 2;
+  border: 15px solid var(--color-accent);
+  border-bottom: 50px solid var(--color-accent);
+  width: 90vw;
+  height: 80vh;
+  background-color: var(--color-primary);
 }
 
 .main {
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 80%;
 }
 
 .main * {
   width: 50%;
 }
 
-.top {
-  border: 2px solid var(--color-accent);
+
+.keyboard-top {
+  height: 25%;
+  background-color: var(--color-accent);
 }
+
 
 .text-field {
   background-color: var(--color-accent);
-  height: 15vh;
   font-size: 2rem;
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
 }
 
 .text-field input {
-  margin-left: 70px;
-  width: 80vw;
   height: 70%;
   font-size: 2rem;
   text-align: left;
@@ -70,19 +92,15 @@ body {
 .predicted-words {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 30%;
   background-color: var(--color-accent);
+  gap: 20vw;
 }
 
-.predicted-words button {
-  font-size: 1.3rem;
-  border: 2px solid var(--color-accent);
-  background-color: var(--color-primary);
-  color: black;
-}
+
 
 .predicted-words button:hover {
   transform: scale(1.1);
@@ -90,8 +108,33 @@ body {
   color: white;
 }
 
+.predicted-words-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.predicted-word {
+  font-size: 3rem;
+  border: 2px solid var(--color-accent);
+  background-color: var(--color-primary);
+}
+
+.predicted-words button {
+  font-size: 1.8rem;
+  border: 2px solid var(--color-accent);
+  background-color: var(--color-primary);
+  color: black;
+  border-radius: 10%;
+  width: 8vw;
+  height: 6vh;
+}
+
 .key-screen {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   background-color: var(--color-primary);
   border: 1px solid var(--color-accent);
@@ -136,7 +179,6 @@ body {
 }
 .rest-area {
   background-color: var(--color-primary);
-  border: 1px solid var(--color-accent);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -198,12 +240,11 @@ body {
 .clear-button {
   font-size: 2rem;
   border: 3px solid var(--color-accent);
-  background-color: var(--color-accent);
   color: white;
   font-size: large;
 }
 
-.clear-button:hover {
+.control-button:hover {
   background-color: coral;
   color: black;
 }
@@ -214,11 +255,16 @@ body {
 
 .control-button {
   border: 3px solid var(--color-accent);
+  background-color: var(--color-accent);
   border-radius: 10%;
   color: white;
   font-size: large;
-  width: 6vw;
-  height: 11vh;
+  width: 12vw;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .keygroup-highlight {
@@ -228,8 +274,23 @@ body {
 .keys button.letter-highlight {
   background-color: ivory;
   height: 100%;
+  width: fit-content;
 }
 
 .settings {
   width: 50%;
 }
+
+.progress-button {
+  position: relative;
+  overflow: hidden;
+}
+
+.progress-indicator {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  background-color: #4f4caf;  /* Change this to your preferred color */
+}
+
